--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL = https://api.jikan.moe/v4
+
+GITHUB_CLIENT=b813215aba0a84340324
+GITHUB_SECRET=390309f3c33607cc7f234042f7f449330982a45c
+
+NEXTAUTH_SECRET=rahasia123
