--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@ GITHUB_CLIENT=b813215aba0a84340324
 GITHUB_SECRET=390309f3c33607cc7f234042f7f449330982a45c
 
 NEXTAUTH_SECRET=rahasia123
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="mysql://root:@localhost:3306/cuyanimelist"
