--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.13",
+    "@prisma/client": "^5.7.0",
     "eslint-config-next": "^14.0.4",
     "next": "^14.0.4",
     "next-auth": "^4.24.4",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^10",
     "postcss": "^8",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3"
   }
 }
